# llvm-edge-log

./: CMakeLists.txt  README.md  inst_compiler.py  summarize_edges.py
Runtime/: CMakeLists.txt  edge-log-rt.c  edge-log-rt.cpp
Transform/: EdgeLog.cpp
Transforms/: CMakeLists.txt
Transforms/EdgeLog/: CMakeLists.txt  EdgeLog.cpp
Transforms/SplitCompares/: CMakeLists.txt  SplitCompares.cpp
Transforms/SplitSwitches/: CMakeLists.txt  SplitSwitches.cpp
include/: edge-log.h
